2021-02-03  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/adsquery: Began work on script to query
	books from the Astrophysical Data System.

2021-01-30  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/entryxml.py (entry_xml_keywords):
	Modified function to work properly with list object

2021-01-29  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/aaaconvert (parse_keywords): Changed
	entry['keywords'] to entry['Keywords']

2021-01-28  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/aaaconvert: Extend suffix in parsing
	the AAA number from a-c to a-z.

2021-01-24  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (getargs): Added command line flags
	to turn off each test.  Reenabled test for 'translation of' in the
	comments.
	(main): Added test and flag for 'Tafeln'.  Made seperate test
	functions to satisfy pylint.

2021-01-19  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/findjournals (clean_review_string): Added
	commands to remove ' NF' and ' NS'.  Moved '.' replacement to
	start of cleanup.

2021-01-17  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/lib/pagination_xml.py: Changed Tafeln
	from 'P' to 'T'.  Also made 'pa' as OtherSec_1.

2020-12-31  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/findjournals (clean_review_string): Added
	more clean up of review string.  Trying to take out more
	punctuation.

2020-12-23  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalmenus.py: Began adding a
	Sort By menu to journals.  Only action right now is to sort by
	Journal title but I may think of more.

	* Tools/python/aabooks/ajbbook/menus.py (create_edit_menu): Began
	adding a Sort By menu to ajbbooks. Added menu with empty actions
	for sort by AJB/AAA number, sort by author, and restore original
	order.  Don't know how I might restore the original order yet;
	particularly if an entry is added or deleted.

2020-12-22  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (main): Added pagination